timeline_style.css
.timeline {
  position: relative;
  width: 100%;
  max-width: 1140px;
  margin: 0 auto;
  padding: 15px 0;
  box-sizing: border-box;

}

.timeline::after {
  content: '';
  position: absolute;
  width: 2px;
  background: lightcyan;
  top: 0;
  bottom: 0;
  left: 50%;
  margin-left: -1px;
  box-sizing: border-box;
}

.container_timeline {
  padding: 15px 30px;
  position: relative;
  background: inherit;
  width: 50%;
    box-sizing: border-box;

}

.container_timeline.left {
  left: 0;
    box-sizing: border-box;

}

.container_timeline.right {
  left: 50%;
    box-sizing: border-box;

}

.container_timeline::after {
  content: '';
  position: absolute;
  width: 16px;
  height: 16px;
  top: calc(50% - 8px);
  right: -8px;
  background: #ffffff;
  border: 2px solid #006E51;
  border-radius: 16px;
  z-index: 1;
    box-sizing: border-box;

}

.container_timeline.right::after {
  left: -8px;
    box-sizing: border-box;

}

.container_timeline::before {
  content: '';
  position: absolute;
  width: 50px;
  height: 2px;
  top: calc(50% - 1px);
  right: 8px;
  background: lightcyan;
  z-index: 1;
    box-sizing: border-box;

}

.container_timeline.right::before {
  left: 8px;
    box-sizing: border-box;

}

.container_timeline .date {
  position: absolute;
  display: inline-block;
  top: calc(50% - 8px);
  text-align: center;
  font-size: 14px;
  font-weight: bold;
  color: lightcyan;
  text-transform: uppercase;
  letter-spacing: 1px;
  z-index: 1;
    box-sizing: border-box;

}

.container_timeline.left .date {
  right: -21%;
  box-sizing: border-box;

}

.container_timeline.right .date {
  left: -20%;
    box-sizing: border-box;

}

.container_timeline .icon {
  position: absolute;
  display: inline-block;
  width: 40px;
  height: 40px;
  padding: 9px 0;
  top: calc(50% - 20px);
  background: #4FD1C5;
  border: 2px solid lightcyan;
  border-radius: 40px;
  text-align: center;
  font-size: 18px;
  color: lightcyan;
  z-index: 1;
    box-sizing: border-box;

}

.container_timeline.left .icon {
  right: 56px;
    box-sizing: border-box;

}

.container_timeline.right .icon {
  left: 56px;
    box-sizing: border-box;

}

.container_timeline .content {
  padding: 10px 70px 10px 15px;
  background: #4FD1C5;
  position: relative;
  border-radius: 0 500px 500px 0;
    box-sizing: border-box;

}

.container_timeline.right .content {
  padding: 10px 15px 10px 70px;
  border-radius: 500px 0 0 500px;
    box-sizing: border-box;

}

.container_timeline .content h2 {
  margin: 0 0 10px 0;
  font-size: 18px;
  font-weight: normal;
  color: #006E51;
    box-sizing: border-box;

}

.container_timeline .content p {
  margin: 0;
  font-size: 16px;
  line-height: 22px;
  color: #000000;
    box-sizing: border-box;

}

@media (max-width: 767.98px) {
  .timeline::after {
    left: 90px;
  }

  .container_timeline {
    width: 100%;
    padding-left: 120px;
    padding-right: 30px;
  }

  .container_timeline.right {
    left: 0%;
  }

  .container_timeline.left::after, 
  .container_timeline.right::after {
    left: 82px;
  }

  .container_timeline.left::before,
  .container_timeline.right::before {
    left: 100px;
    border-color: transparent #006E51 transparent transparent;
  }

  .container_timeline.left .date,
  .container_timeline.right .date {
    right: auto;
    left: 15px;
  }

  .container_timeline.left .icon,
  .container_timeline.right .icon {
    right: auto;
    left: 146px;
  }

  .container_timeline.left .content,
  .container_timeline.right .content {
    padding: 30px 30px 30px 90px;
    border-radius: 500px 0 0 500px;
  }
}

